force-app/main/default/objects/Portfolio_Certification__mdt/Portfolio_Certification__mdt.object-meta.xml
<CustomObject>
    <label>Portfolio Certification</label>
    <pluralLabel>Portfolio Certifications</pluralLabel>
</CustomObject>