force-app/main/default/objects/Portfolio_Certification__mdt/fields/Badge_Color__c.field-meta.xml
<CustomField>
    <fullName>Badge_Color__c</fullName>
    <label>Badge Color</label>
    <length>10</length>
    <type>Text</type>
</CustomField>