force-app/main/default/objects/Portfolio_Certification__mdt/fields/Cert_URL__c.field-meta.xml
<CustomField>
    <fullName>Cert_URL__c</fullName>
    <label>Cert URL</label>
    <type>Url</type>
</CustomField>