force-app/main/default/objects/Portfolio_Certification__mdt/fields/Credential_ID__c.field-meta.xml
<CustomField>
    <fullName>Credential_ID__c</fullName>
    <label>Credential ID</label>
    <length>100</length>
    <type>Text</type>
</CustomField>