force-app/main/default/objects/Portfolio_Certification__mdt/fields/Issue_Date__c.field-meta.xml
<CustomField>
    <fullName>Issue_Date__c</fullName>
    <label>Issue Date</label>
    <length>50</length>
    <type>Text</type>
</CustomField>