force-app/main/default/objects/Portfolio_Certification__mdt/fields/Issuer__c.field-meta.xml
<CustomField>
    <fullName>Issuer__c</fullName>
    <label>Issuer</label>
    <length>100</length>
    <type>Text</type>
</CustomField>